# markovgen

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  cog.toml
benches/: US_Census_1990_Frequent_Male_First_Names.info.txt  US_Census_1990_Frequent_Male_First_Names.txt  first_names.rs
src/: lib.rs
