[package]
name = "markovgen"
version = "0.1.0"
description = "A library for building markov chain graphs from text datasets and performantly generating text sequences by traversing them, includes an accompanying CLI application."
license = "MIT"
repository = "https://github.com/sysrqmagician/markovgen"
readme = "README.md"
categories = ["mathematics", "command-line-utilities"]
keywords = ["graph", "markov", "probability", "generation", "procedural"]
edition = "2021"

[features]
cli_no_print = []

[[bin]]
name = "markovcli"
path = "src/bin/cli.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
clap_complete = "4.5.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive", "rc"] }
smartstring = "1.0.1"

[dev-dependencies]
criterion = "0.5.1"
flamegraph = "0.6.5"

[[bench]]
name = "first_names"
harness = false

[profile.release]
lto = true
